# pywikigame

./: db.sqlite3  manage.py  pyproject.toml
pywikigame/: asgi.py  message_handlers.py  models.py  settings.py  urls.py  views.py  wsfix.py  wsgi.py
pywikigame/migrations/: 0001_initial.py  0002_auto_20201022_2310.py  0003_auto_20201022_2344.py
static/: index.html  main.css  main.js  message_handlers.js  socket.js
static/tools/: reset_all.py
